完成查询用户help的接口，修复查询好友的功能
